changed the website to be a set max width rather than adapt. temporary fix to the navbar overlapping

--- a/assets/timber.scss
+++ b/assets/timber.scss
@@ -426,7 +426,7 @@ body {
 
 .wrapper {
   @include clearfix();
-  max-width: $siteWidth;
+  max-width: 1330px;
   margin: 0 auto;
   padding: 0 ($gridGutter / 2);
 
